tests/samples/invalid/mismatched_variable_type.pn
fn main()
{
	var x: bool = 23;
}
